--- a/UART_TX_RX/main.c.bak.3
+++ b/UART_TX_RX/main.c.bak.3
@@ -63,6 +63,27 @@ void sudo_delay(int delay)
     }
 }
 
+
+/******************************************************************************/
+/*
+    BAUD = Fck/(16*USARTDIV)
+    i.e. USARTDIV = PCLK1/(Baud*16)
+      @Baud=115200
+      @PCLK1= 16 MHZ = 16000000	Hz
+	USARTDIV = 8.680
+	  i.e.	BRR_mantissa  =	8 = 0x8
+		BRR_frac      =	0.680*16 = 10.88  = 11 =0xB
+	Hence BRR = 0x8B
+*/
+/******************************************************************************/
+//BRR =	(Pclk +	(BaudRate / 2))	/ BaudRate
+
+static uint16_t	calc_BRR(uint32_t Pclk,	uint32_t BaudRate)
+{
+  uint16_t brr = (Pclk + (BaudRate / 2)) / BaudRate;
+  return  brr;
+}
+
 /******************************************************************************/
 /*
       init()
@@ -90,18 +111,23 @@ void init()
     GPIOD->MODER |= GPIO_MODER_MODER8_1	      // 0b10 >	AF Mode
 		    | GPIO_MODER_MODER9_1;    //set	PD8,9 to AF
 
-    GPIOD->AFR[1] |= (0b111 << 4 * 0) |	(0b111 << 4 * 1);    //	0111(9)	0111(8)	>  0x77	put PD8,9 as AF7
+    //	0111(9)	0111(8)	>  0x77	put PD8,9 as AF7
+    GPIOD->AFR[1] |= (0b111 << 4 * 0) |	(0b111 << 4 * 1);    //blocks of 4bits.	So firs	t4 bits	= 4*0 and then 4*1 etc....
 
     /*
-    BAUD = Fck/(16*USARTDIV)
-    i.e. USARTDIV = PCLK1/(Baud*16)
-      @Baud=115200 @PCLK1= 16 MHZ
-	USARTDIV = 8.680
-	  i.e.	BRR_mantissa  =	8 = 0x8
-		BRR_frac      =	0.680*16 = 10.88  = 11 =0xB
-	Hence BRR = 0x8B
+	BAUD = Fck/(16*USARTDIV)
+	i.e. USARTDIV =	PCLK1/(Baud*16)
+	  @Baud=115200
+	  @PCLK1= 16 MHZ = 16000000	Hz
+	    USARTDIV = 8.680
+	      i.e.	BRR_mantissa  =	8 = 0x8
+		    BRR_frac	  =	0.680*16 = 10.88  = 11 =0xB
+	    Hence BRR =	0x8B
     */
-    USART3->BRR	|= 0x8B;    //set baurdate	= 115200
+    uint32_t Pclk     =	16000000;
+    uint32_t BaudRate =	115200;
+
+    USART3->BRR	|= calc_BRR(Pclk, BaudRate);	//set baurdate	= 115200
 
     USART3->CR1	|= (1 << 3);	//Bit 3	TE: Transmitter	enable
     USART3->CR1	|= (1 << 2);	//Bit 2	RE: Receiver enable
@@ -125,22 +151,25 @@ void init()
 */
 /******************************************************************************/
 
-void usart3_write(int ch)
-{
-    //check	Tx buffer is empty
-    while(!(USART3->SR & (1 << 7))) {
-    };			      //Bit	7 TXE: Transmit	data register empty
-    USART3->DR = (ch & 0xFF); /* '&0xFF' makes	sure value	sent is	8bits (my guess). Might	be better ways to implement
-				     *	'&0x7F'	might be used when parity is  enables and data is 7 bits. (agin	my guess)
-				     */
-}
+//void usart3_write(int	ch)
+//{
+//    //check	Tx buffer is empty
+//    while(!(USART3->SR & (1 << 7))) {
+//    };			//Bit	7 TXE: Transmit	data register empty
+//    USART3->DR = (ch & 0xFF);	/* '&0xFF' makes	sure value	sent is	8bits (my guess). Might	be better ways to implement
+//				     *	'&0x7F'	might be used when parity is  enables and data is 7 bits. (agin	my guess)
+//				     */
+//}
 
 //write	single char to USART
 int USART_fputc(int ch)
 {
-    while(!(USART3->SR & (1	<< 7)))	{
-    };
-    USART3->DR = (ch & 0xFF);
+    //check	Tx buffer is empty
+    while(!(USART3->SR & (1 << 7))) { //Wait while Tx Buffer is	not empty
+    };			      //Bit	7 TXE: Transmit	data register empty
+    USART3->DR = (ch & 0xFF); /*	'&0xFF'	makes	sure value	sent is	8bits (my guess). Might	be better ways to implement
+				     *	'&0x7F'	might be used when parity is  enables and data is 7 bits. (agin	my guess)
+				     */
     return ch;
 }
 /******************************************************************************/
@@ -152,20 +181,20 @@ int USART_fputc(int ch)
 */
 /******************************************************************************/
 
-char usart3_read()
-{
+//char usart3_read()
+//{
 
-    while(!(USART3->SR & (1 << 5))) {
-    };	  //Bit	5 RXNE:	Read data	register not empty; RXNE = 1
+//    while(!(USART3->SR & (1 << 5))) {
+//    };    //Bit	5 RXNE:	Read data	register not empty; RXNE = 1
 
-    return USART3->DR;
-}
+//    return USART3->DR;
+//}
 
 //read single char from	USART
 int USART_fgetc(void)
 {
-    while(!(USART3->SR & (1	<< 5)))	{
-    };
+    while(!(USART3->SR & (1 << 5))) {	//Wait while Rx	Buffer is empty	or wait	till it	is not empty
+    };	  //Bit	5 RXNE:	Read data	register not empty; RXNE = 1
 
     return USART3->DR;
 }
@@ -176,15 +205,7 @@ int USART_fgetc(void)
 */
 /******************************************************************************/
 
-struct __FILE {
-    int	handle;
-};
-
-__FILE __stdin	={0};
-__FILE __stdout	=	{1};
-__FILE __stderr	=	{2};
-
-int fgetc(FILE *f)
+int __getchar()
 {
     int	ch;
     ch = USART_fgetc();
@@ -196,7 +217,7 @@ int fgetc(FILE *f)
     return ch;
 }
 
-int fputc(int ch, FILE *f)
+int __putchar(int ch)
 {
     return USART_fputc(ch);
 }
@@ -236,7 +257,7 @@ int main(void)
 
     printf("Enter a number\r\n");
     scanf("%d",	&number);
-    number = toDigit(number);
+    //number = toDigit(number);
     led(number);
     } while(1);
 }
