--- a/UART_TX_RX/main.c.bak.2
+++ b/UART_TX_RX/main.c.bak.2
@@ -251,9 +251,7 @@ int main(void)
     do {
     sudo_delay(50);
     uart3_SendString("Enter a number\r\n");
-    //uart3_scanf("%d",	&number);
-    //number = toDigit(number);
-    //number = toDigit(uart3__getc());
+    number = toDigit(uart3__GetChar());
     led(number);
     } while(1);
 }
